@@ -60,6 +60,7 @@ sunuo (0.3.2) unstable; urgency=low
     - use XmlReader instead of XmlDocument.Load() to parse the accounts file
     - use DateTime.Now cache
     - removed from Notoriety: CheckAggressor(), CheckAggressed()
+    - fixed PlayerVendor cash bug, thanks to pmb
   * extended API for optimization
     - Mobile: added AggressorsOrNull, FindAggressorByAttacker(),
       FindAggressorByDefender(), AggressedOrNull, FindAggressedByAttacker(),
